frontend/tests/cases/positive/hsup/unaryConstructor.gr
data Wrap a = Wrap a

unwrap : forall {a : Type} . !(Wrap a) -> a
unwrap [Wrap x] = x