frontend/tests/cases/negative/splitting/named.gr
data N where
   Z : N;
   S : (notZ : N) -> N

succ : N -> N
succ x = {! x !}
